--- a/production/css/index.css
+++ b/production/css/index.css
@@ -36,11 +36,17 @@ main {
 /* LOADER */
 
 
-.loader-container {
+#loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    z-index: 1000;
 }
 
 .loader {
