--- a/production/css/index.css
+++ b/production/css/index.css
@@ -169,6 +169,7 @@ canvas {
     border-radius: 0.5rem;
     font-size: 1rem;
     width: 7rem;
+    box-shadow: 3px 3px 5px 1px #a8a8a8;
 }
 
 #reload-btn:hover {
@@ -180,7 +181,6 @@ canvas {
 
 
 #go-scenarios {
-    /*display: flex;*/
     flex-direction: column;
     align-items: center;
 }
