--- a/production/css/index.css
+++ b/production/css/index.css
@@ -215,7 +215,7 @@ canvas {
 }
 
 #go-btn:hover {
-    margin: 2rem 1rem 1rem 1rem;
+    margin: 2rem 0 1rem 0;
 
     width: 11rem;
     height: 11rem;
