--- a/production/css/index.css
+++ b/production/css/index.css
@@ -138,8 +138,6 @@ canvas {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
-    /*position: absolute;*/
 }
 
 #canvas-simulateur:hover {
@@ -187,12 +185,21 @@ canvas {
 }
 
 
+/* RIGHT PART */
+
+
+#right-part > * {
+    margin: 0 1rem 0 1rem;
+}
+
+
 /* RIGHT PART : GO and SCENARIOS */
 
 
 #robots-go-scenarios {
     flex-direction: column;
-    align-items: center;
+    /*align-items: center;*/
+    justify-content: space-evenly;
 }
 
 .div-choice {
@@ -206,7 +213,6 @@ canvas {
     border-radius: 100%;
     width: 10rem;
     height: 10rem;
-    margin: 2rem 1rem 2rem 1rem;
 
     /* text */
     font-size: 3rem;
@@ -220,20 +226,12 @@ canvas {
 }
 
 #go-btn:hover {
-    margin: 2rem 0 1rem 0;
-
-    width: 11rem;
-    height: 11rem;
-    translate: -5px -5px;
+    transform: scale(1.1) translate(-5px, -5px);
     box-shadow: 20px 20px 10px 1px grey;
 }
 
 #go-btn:active {
-    margin: 2rem 1rem 2rem 1rem;
-
-    width: 10rem;
-    height: 10rem;
-    translate: 10px 10px;
+    transform: scale(0.9) translate(10px, 10px);
     box-shadow: 3px 3px 5px 1px grey;
 }
 
