--- a/production/css/index.css
+++ b/production/css/index.css
@@ -66,10 +66,6 @@ main {
     justify-content: space-evenly;
 }
 
-.part {
-    /*border: 1px solid blue;*/
-}
-
 
 /* LOADER */
 
@@ -156,6 +152,11 @@ header {
 
 /* LEFT PART */
 
+
+#canvas-container {
+    display: flex;
+    flex-direction: row;
+}
 
 .simulator-container {
     position: relative;
