--- a/production/css/index.css
+++ b/production/css/index.css
@@ -221,7 +221,7 @@ canvas {
     background-color: darkgray;
 }
 
-.checkbox {
+.param {
     background-color: lightgray;
     border: none;
     padding: 0.5em;
@@ -235,7 +235,6 @@ canvas {
 .input-checkbox {
     width: 2rem;
 }
-
 
 /* RIGHT PART */
 
