FONCTIONNALITE : on peut mantenant afficher ou non le detection de boules sur le simulateur

--- a/production/css/index.css
+++ b/production/css/index.css
@@ -163,9 +163,10 @@ header {
 }
 
 .simulator-container {
-    position: relative;
+    align-self: center;
     height: 306px;
     width: 563px;
+    padding-top: 1rem;
 
     canvas {
         position: absolute;
