--- a/production/css/index.css
+++ b/production/css/index.css
@@ -1,43 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+NZ:wght@100..400&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
-@media (max-width: 600px) {
-    * {
-        background-color: darkslategray;
-    }
-
-    #titre {
-        display: none;
-    }
-
-    #grid-btns {
-        display: block;
-    }
-
-    #camera {
-        display: none;
-    }
-
-    #robots-go-scenarios {
-        display: none;
-    }
-
-    #left-part {
-        display: none;
-    }
-
-    #input-duration {
-        background-color: white;
-    }
-
-    canvas {
-        display: none;
-    }
-
-    footer {
-        display: none;
-    }
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -474,4 +436,47 @@ footer {
 
 .displayFlex {
     display: flex;
+}
+
+
+@media (max-width: 600px) {
+    * {
+        background-color: white;
+    }
+
+    #titre {
+        display: none;
+    }
+
+    /*#grid-btns {*/
+    /*    display: block;*/
+    /*}*/
+    main {
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    #camera {
+        display: none;
+    }
+
+    #simulator {
+        display: none;
+    }
+
+    #robots-go-scenarios {
+        display: none;
+    }
+
+    #canvas-container {
+        display: none;
+    }
+
+    #input-duration {
+        background-color: white;
+    }
+
+    footer {
+        display: none;
+    }
 }
