--- a/production/css/index.css
+++ b/production/css/index.css
@@ -114,6 +114,43 @@ header {
 
 /* LEFT PART */
 
+#fond {
+    position: fixed;
+    backdrop-filter: blur(0.15rem);
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+}
+
+#menu-options {
+    position: absolute;
+    background-color: #CC99FF;
+    left: 0;
+    height: 100%;
+    width: 25%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 10px 30px;
+}
+
+#header-menu-options {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1rem;
+    align-items: center;
+}
+
+#croix {
+    cursor: pointer;
+    width: 20px;
+    padding: 1rem;
+}
+
+#options-list {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+
+}
 
 #canvas-container {
     display: flex;
@@ -158,30 +195,16 @@ canvas {
     flex-direction: row;
 }
 
-.select-top-table-container {
+select {
     background-color: lightgray;
     border: none;
     padding: 0.5em;
     margin: 0.8em;
     justify-content: center;
+    text-align: center;
     border-radius: 0.5rem;
     font-size: 1rem;
-}
-
-#reload-btn {
-    background-color: lightgray;
-    border: none;
-    padding: 0.5em;
-    margin: 0.8em;
-    justify-content: center;
-    border-radius: 0.5rem;
-    font-size: 1rem;
-    width: 7rem;
     box-shadow: 3px 3px 5px 1px #a8a8a8;
-}
-
-#reload-btn:hover {
-    background-color: darkgray;
 }
 
 .param {
@@ -190,14 +213,21 @@ canvas {
     padding: 0.5em;
     margin: 0.8em;
     justify-content: center;
+    text-align: center;
     border-radius: 0.5rem;
     font-size: 1rem;
     box-shadow: 3px 3px 5px 1px #a8a8a8;
+    width: auto;
 }
 
-.input-checkbox {
-    width: 2rem;
+.param > label, output {
+    padding: 0rem 0.5rem 0rem 0.5rem;
 }
+
+#reload-btn:hover, #btn-options:hover {
+    background-color: darkgray;
+}
+
 
 /* RIGHT PART */
 
@@ -254,19 +284,19 @@ canvas {
     padding: 1rem;
 }
 
-select {
+/*select {*/
 
-    padding: 0.5rem;
+/*    padding: 0.5rem;*/
 
-    /* style */
-    border: none;
-    border-radius: 5px;
-    background-color: #F0F0F0;
-    box-shadow: 3px 3px 5px 1px #a8a8a8;
-    font-size: 1rem;
+/*    !* style *!*/
+/*    border: none;*/
+/*    border-radius: 5px;*/
+/*    background-color: #F0F0F0;*/
+/*    box-shadow: 3px 3px 5px 1px #a8a8a8;*/
+/*    font-size: 1rem;*/
 
-    transition: all ease 0.2s;
-}
+/*    transition: all ease 0.2s;*/
+/*}*/
 
 #select-scenarios:hover {
     background: lightgrey;
@@ -274,7 +304,6 @@ select {
 
 .option {
     background-color: #F0F0F0;
-
     transition: all ease 0.2s;
 }
 
@@ -448,9 +477,6 @@ footer {
         display: none;
     }
 
-    /*#grid-btns {*/
-    /*    display: block;*/
-    /*}*/
     main {
         justify-content: center;
         flex-direction: column;
