--- a/production/css/index.css
+++ b/production/css/index.css
@@ -488,8 +488,18 @@ footer {
         display: none;
     }
 
-    #input-duration {
-        background-color: white;
+    #cursor-direction-motor-mobile {
+        writing-mode: horizontal-tb;
+        width: auto;
+    }
+
+    #right-part-mobile {
+        display: block;
+        align-self: center;
+    }
+
+    #right-part {
+        display: none;
     }
 
     footer {
