--- a/production/css/index.css
+++ b/production/css/index.css
@@ -457,7 +457,7 @@ footer {
     display: flex;
 }
 
-
+/* Interface mobile */
 @media (max-width: 600px) {
     * {
         background-color: white;
